Fix overflowing labels in dropdown buttons.
 - Position the icons absolutely within the button to prevent changes
   in text label width from pushing them around
 - Wrap the text in a label so that it doesn't overflow under the icons
 - Add some padding to the buttons and left align the text
 - Set the title attribute on the anchors so that the tooltip shows the
   complete title if it's truncated

--- a/ui/js/component/dropdown/style.scss
+++ b/ui/js/component/dropdown/style.scss
@@ -2,6 +2,23 @@
 	cursor: default;
 	position: relative;
 
+	.menu-button {
+		padding-right: 2rem;
+		position: relative;
+
+		label {
+			overflow: hidden;
+			white-space: nowrap;
+		}
+
+		.icon {
+			margin-top: -0.4rem;
+			position: absolute;
+			right: 0.5rem;
+			top: 50%;
+		}
+	}
+
 	.container {
 		background-color: white;
 		border-radius: 3px;
